# aoc-2025

./: .gitignore  CMakeLists.txt
common/: helpers.cpp  helpers.hpp
day-1/: main.cpp
day-2/: main.cpp
day-3/: main.cpp
day-4/: main.cpp
day-5/: main.cpp  test-input
day-6/src/: logic.cpp  logic.hpp  main.cpp
day-6/tests/: test_logic.cpp
day-7/src/: main.cpp
